--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "leaguejs": "^2.1.3",
+    "moment": "^2.28.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
