--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
-    "leaguejs": "^2.1.3",
+    "kayn": "^0.10.2",
     "moment": "^2.28.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
