--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "yarn dev:start",
     "dev:start": "nodemon --watch src/server src/server",
-    "dev:webpack": "webpack-dev-server --mode development --devtool inline-source-map",
+    "dev:webpack": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "lint": "eslint webpack.config.js src/",
     "prod:build": "webpack --mode production",
     "prod:start": "cross-env NODE_ENV=production node src/server"
