--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
+  },
+  "engines": {
+    "yarn": "1.22.x",
+    "node": "12.x"
   }
 }
