--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb"],
+  "extends": ["airbnb", "prettier"],
   "env": {
     "browser": true,
     "node": true
   },
   "rules": {
     "no-console": "off",
-    "comma-dangle": "off",
     "react/jsx-filename-extension": "off"
   }
 }
