--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "css-loader": "^2.0.0",
     "eslint": "^5.0.0",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.3",
+    "prettier": "2.1.2",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
